fix heading before spacing

--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -1163,7 +1163,7 @@ Usage (In Ghost editor):
     content: '\f550';
     font-family: "Font Awesome 5 Free";
     padding-right: 0.25em;
-    margin-left: -1.5em;
+    margin-left: -1.25em;
     color: #3eb0ef;
 }
 
@@ -1174,7 +1174,7 @@ Usage (In Ghost editor):
     content: '\f101';
     font-family: "Font Awesome 5 Free";
     padding-right: 0.25em;
-    margin-left: -1em;
+    margin-left: -1.1em;
     color: #3eb0ef;
 }
 
